# claimguardian-platform

./: .codeowners  .env.example  .env.local.example  .env.local.template  .env.production  .env.production.example  .env.security.example  .eslintrc.progressive.js  .gitattributes  .gitignore  .lintstagedrc.js  .npmrc  .pnpmfile.cjs  .pnpmfile.cjs.approved-scripts  .pre-commit-config.yaml  .vercelignore  AI_PHASE0_DETAILED_PLAN.md  AI_TECHNICAL_ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_INSTRUCTIONS.md  FLOIR_DEPLOYMENT_GUIDE.md  FLORIDA_DATA_PLATFORM_SUMMARY.md  FLORIDA_PLATFORM_SETUP.md  GEMINI.md  GlobalChange.md  LICENSE  README.md  REORGANIZATION_SUMMARY.md  REPOSITORY_FINAL_CLEANUP_PLAN.md  REPOSITORY_REORGANIZATION_GUIDE.md  REPO_CLEANUP_ANALYSIS.json  SUPABASE_TABLES_COMPLETE_DOCUMENTATION.md  after_typing.py  apply-all-security-fixes.sh  apply-parcels-schema.js  apply-security-fixes-production.sh  apply_claude_migration.js  check-import-status.sh  claimguardian.code-workspace  (+49 more)
.ai-context/: GEMINI.md  LEARNING_LOG.md  README.md  claude-helpers.md  claude-hooks.md  claude-patterns.md  linting_fixes.json  model-roster.json  retrospectives.json  sync-manifest.json
.claude/: claude.md  settings.json  settings.local.backup.1752622923.json
.husky/: post-commit  post-merge  pre-commit
.learning-digest/: README.md  claimguardian.code-snippets  pre-commit-check  search-index.json
.supbase/: cron.json
GOVERNANCE/: README.md
agents/: QUICKSTART.md  api-documenter.md  code-reviewer.md  dependency-updater.md  monorepo-task-runner.md  (+1 more)
ios-app/: README.md
(+2236 files in other folders)
